tigerc/tests/snapshots/test_tokenizer__tokenizer_test31.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test31.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 2, column: 1 } }
Posed { node: Ident(var), pos: Pos { line: 3, column: 5 } }
Posed { node: Ident(a), pos: Pos { line: 3, column: 9 } }
Posed { node: Colon, pos: Pos { line: 3, column: 10 } }
Posed { node: Ident(int), pos: Pos { line: 3, column: 11 } }
Posed { node: Assign, pos: Pos { line: 3, column: 15 } }
Posed { node: Str(" "), pos: Pos { line: 3, column: 18 } }
Posed { node: Ident(in), pos: Pos { line: 4, column: 1 } }
Posed { node: Ident(a), pos: Pos { line: 5, column: 5 } }
Posed { node: Ident(end), pos: Pos { line: 6, column: 1 } }
