tigerc/tests/snapshots/test_tokenizer__tokenizer_test32.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test32.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 3, column: 1 } }
Posed { node: Ident(type), pos: Pos { line: 4, column: 5 } }
Posed { node: Ident(arrayty), pos: Pos { line: 4, column: 10 } }
Posed { node: Eq, pos: Pos { line: 4, column: 18 } }
Posed { node: Ident(array), pos: Pos { line: 4, column: 20 } }
Posed { node: Ident(of), pos: Pos { line: 4, column: 26 } }
Posed { node: Ident(int), pos: Pos { line: 4, column: 29 } }
Posed { node: Ident(var), pos: Pos { line: 6, column: 5 } }
Posed { node: Ident(a), pos: Pos { line: 6, column: 9 } }
Posed { node: Assign, pos: Pos { line: 6, column: 11 } }
Posed { node: Ident(arrayty), pos: Pos { line: 6, column: 14 } }
Posed { node: OpenBracket, pos: Pos { line: 6, column: 22 } }
Posed { node: Number(10), pos: Pos { line: 6, column: 23 } }
Posed { node: CloseBracket, pos: Pos { line: 6, column: 25 } }
Posed { node: Ident(of), pos: Pos { line: 6, column: 27 } }
Posed { node: Str( ), pos: Pos { line: 6, column: 30 } }
Posed { node: Ident(in), pos: Pos { line: 7, column: 1 } }
Posed { node: Number(0), pos: Pos { line: 8, column: 5 } }
Posed { node: Ident(end), pos: Pos { line: 9, column: 1 } }
