tigerc/tests/snapshots/test_tokenizer__tokenizer_test33.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test33.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 2, column: 1 } }
Posed { node: Ident(var), pos: Pos { line: 3, column: 5 } }
Posed { node: Ident(a), pos: Pos { line: 3, column: 9 } }
Posed { node: Assign, pos: Pos { line: 3, column: 10 } }
Posed { node: Ident(rectype), pos: Pos { line: 3, column: 13 } }
Posed { node: OpenBrace, pos: Pos { line: 3, column: 21 } }
Posed { node: CloseBrace, pos: Pos { line: 3, column: 22 } }
Posed { node: Ident(in), pos: Pos { line: 4, column: 1 } }
Posed { node: Number(0), pos: Pos { line: 5, column: 5 } }
Posed { node: Ident(end), pos: Pos { line: 6, column: 1 } }
