tigerc/tests/snapshots/test_tokenizer__tokenizer_test37.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test37.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 3, column: 1 } }
Posed { node: Ident(var), pos: Pos { line: 4, column: 5 } }
Posed { node: Ident(a), pos: Pos { line: 4, column: 9 } }
Posed { node: Assign, pos: Pos { line: 4, column: 11 } }
Posed { node: Number(0), pos: Pos { line: 4, column: 14 } }
Posed { node: Ident(var), pos: Pos { line: 5, column: 5 } }
Posed { node: Ident(a), pos: Pos { line: 5, column: 9 } }
Posed { node: Assign, pos: Pos { line: 5, column: 11 } }
Posed { node: Str( ), pos: Pos { line: 5, column: 14 } }
Posed { node: Ident(in), pos: Pos { line: 6, column: 1 } }
Posed { node: Number(0), pos: Pos { line: 7, column: 5 } }
Posed { node: Ident(end), pos: Pos { line: 8, column: 1 } }
