tigerc/tests/snapshots/test_tokenizer__tokenizer_test39.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test39.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 4, column: 1 } }
Posed { node: Ident(function), pos: Pos { line: 5, column: 5 } }
Posed { node: Ident(g), pos: Pos { line: 5, column: 14 } }
Posed { node: OpenParen, pos: Pos { line: 5, column: 15 } }
Posed { node: Ident(a), pos: Pos { line: 5, column: 16 } }
Posed { node: Colon, pos: Pos { line: 5, column: 17 } }
Posed { node: Ident(int), pos: Pos { line: 5, column: 18 } }
Posed { node: CloseParen, pos: Pos { line: 5, column: 21 } }
Posed { node: Colon, pos: Pos { line: 5, column: 22 } }
Posed { node: Ident(int), pos: Pos { line: 5, column: 23 } }
Posed { node: Eq, pos: Pos { line: 5, column: 27 } }
Posed { node: Ident(a), pos: Pos { line: 5, column: 29 } }
Posed { node: Ident(function), pos: Pos { line: 6, column: 5 } }
Posed { node: Ident(g), pos: Pos { line: 6, column: 14 } }
Posed { node: OpenParen, pos: Pos { line: 6, column: 15 } }
Posed { node: Ident(a), pos: Pos { line: 6, column: 16 } }
Posed { node: Colon, pos: Pos { line: 6, column: 17 } }
Posed { node: Ident(int), pos: Pos { line: 6, column: 18 } }
Posed { node: CloseParen, pos: Pos { line: 6, column: 21 } }
Posed { node: Colon, pos: Pos { line: 6, column: 22 } }
Posed { node: Ident(int), pos: Pos { line: 6, column: 23 } }
Posed { node: Eq, pos: Pos { line: 6, column: 27 } }
Posed { node: Ident(a), pos: Pos { line: 6, column: 29 } }
Posed { node: Ident(in), pos: Pos { line: 7, column: 1 } }
Posed { node: Number(0), pos: Pos { line: 8, column: 5 } }
Posed { node: Ident(end), pos: Pos { line: 9, column: 1 } }
